@@ -1,5 +1,13 @@
 2013-12-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* TransformTool.wrl:
+	* jsContext.cpp:
+	* jsSFVec4.h:
+	* jsSFVec2.h:
+	* jsSFVec3.h: 
+
+2013-12-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* X3DBrowserSurface.cpp:
 	* ExamineViewer.h:
 	* LookAtViewer.cpp:
