@@ -1,5 +1,14 @@
 2013-12-04  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBrowserEditor.h:
+	* X3DBrowserWidget.cpp:
+	* X3DBrowserEditor.cpp:
+	* MaterialEditor.cpp:
+	* NodePropertiesEditor.h:
+	* NodePropertiesEditor.cpp: 
+
+2013-12-04  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* BrowserWindow.cpp:
 	* X3DBrowserWidget.cpp:
 	* X3DBrowserEditor.cpp:
